--- a/src/main/resources/rc/project/Browse.fxml
+++ b/src/main/resources/rc/project/Browse.fxml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="660.0" prefWidth="850.0" style="-fx-background-color: #414361;"  xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Browse">
+<AnchorPane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #555555;" stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Browse">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2a2d43;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #333333;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Text layoutX="368.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Browse">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Text>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="660.0" prefWidth="820.0">
+               <children>
+                  <ScrollPane fx:id="scrollPane" prefHeight="660.0" prefWidth="820.0" style="-fx-background-color: #333333;">
+                     <content>
+                        <GridPane fx:id="gridPane" prefHeight="0.0" prefWidth="0.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                        </GridPane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </HBox>
          </children>
       </Pane>
    </children>
