--- a/src/main/resources/rc/project/Dashboard.css
+++ b/src/main/resources/rc/project/Dashboard.css
@@ -4,3 +4,6 @@
 .display {
     -fx-background-radius: 30px 30px 30px 30px;
 }
+.scroll-pane > .viewport {
+   -fx-background-color: transparent;
+}
