--- a/src/main/resources/rc/project/deModificat.fxml
+++ b/src/main/resources/rc/project/deModificat.fxml
@@ -5,12 +5,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="660.0" prefWidth="850.0" style="-fx-background-color: #414361;" stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Browse">
+<AnchorPane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #555555;" stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Browse">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2a2d43;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #333333;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Text layoutX="368.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Browse">
+            <Text layoutX="368.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="blank">
                <font>
                   <Font size="36.0" />
                </font>
