--- a/src/main/resources/rc/project/Item.fxml
+++ b/src/main/resources/rc/project/Item.fxml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #333333;" stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Item">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Item">
    <children>
       <Pane prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #555555;" styleClass="display">
          <children>
             <VBox prefHeight="250.0" prefWidth="250.0">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Ford Mondeo" textAlignment="CENTER" wrappingWidth="250.0">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="50 ron / day" textAlignment="CENTER" wrappingWidth="250.0" />
+                  <Label fx:id="itemText" alignment="CENTER" prefWidth="250.0" text="Ford Mondeo" textAlignment="CENTER" />
+                  <Label fx:id="itemPrice" alignment="CENTER" prefWidth="250.0" text="50 ron / day" textAlignment="CENTER" />
                   <ImageView fitHeight="160.0" fitWidth="250.0" pickOnBounds="true">
                      <VBox.margin>
                         <Insets />
@@ -33,14 +29,14 @@
                   </ImageView>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Details">
+                        <Button alignment="CENTER" mnemonicParsing="false" prefWidth="90.0" styleClass="record-sales" text="Details" textAlignment="CENTER">
                            <HBox.margin>
-                              <Insets left="50.0" top="10.0" />
+                              <Insets left="10.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" text="Order">
+                        <Button alignment="CENTER" mnemonicParsing="false" prefWidth="90.0" styleClass="record-sales" text="Order" textAlignment="CENTER">
                            <HBox.margin>
-                              <Insets left="50.0" top="10.0" />
+                              <Insets left="50.0" />
                            </HBox.margin>
                         </Button>
                      </children>
@@ -50,4 +46,8 @@
          </children>
       </Pane>
    </children>
+   <stylesheets>
+      <URL value="@Dashboard.css" />
+      <URL value="@buttonStyle.css" />
+   </stylesheets>
 </AnchorPane>
