--- a/src/main/resources/rc/project/SignUp.fxml
+++ b/src/main/resources/rc/project/SignUp.fxml
@@ -1,67 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<AnchorPane prefHeight="528.0" prefWidth="765.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.SignUpController">
-   <children>
-      <ImageView fitHeight="140.0" fitWidth="197.0" layoutX="290.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-<!--            <Image url="@../images/car.png" />-->
-         </image>
-      </ImageView>
-
-      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="225.0" layoutY="193.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-
-         </image>
-      </ImageView>
-      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="225.0" layoutY="263.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-
-         </image>
-      </ImageView>
-      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="225.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-<!--            <Image url="@../images/iconfinder_icons_password_1564520.png" />-->
-         </image>
-      </ImageView>
-
-      <Label layoutX="330.0" layoutY="147.0" prefHeight="27.0" prefWidth="67.0" text="Rent a" textFill="#5bb4cd">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="390.0" layoutY="147.0" prefHeight="27.0" prefWidth="30.0" text="Car" textFill="#a2b1b5">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
-      <TextField layoutX="262.0" layoutY="195.0" prefHeight="25.0" prefWidth="113.0" promptText="First Name" style="-fx-background-color: #787880;">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <TextField layoutX="390.0" layoutY="195.0" prefHeight="25.0" prefWidth="113.0" promptText="Last Name" style="-fx-background-color: #787880;">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <TextField layoutX="261.0" layoutY="263.0" prefHeight="30.0" prefWidth="243.0" promptText="exemple@exemple.com" style="-fx-background-color: #787880;">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <PasswordField layoutX="262.0" layoutY="325.0" prefHeight="30.0" prefWidth="243.0" promptText="Passowrd" style="-fx-background-color: #787880;">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </PasswordField>
-   </children>
+<AnchorPane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #555555;" stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.SignUpController">
+    <children>
+        <Pane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #333333;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Text fill="#e8e3e3" layoutX="314.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="REGISTRATION" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="27.0" />
+               </font>
+            </Text>
+            <TextField layoutX="237.0" layoutY="268.0" prefHeight="25.0" prefWidth="193.0" promptText="phone number" />
+            <TextField fx:id="firstName" layoutX="237.0" layoutY="175.0" promptText="first name" />
+            <TextField fx:id="lastName" layoutX="417.0" layoutY="175.0" prefHeight="25.0" prefWidth="149.0" promptText="last name" />
+            <PasswordField fx:id="confirmPassword" layoutX="417.0" layoutY="225.0" promptText="confirm password" />
+            <PasswordField fx:id="password" layoutX="237.0" layoutY="225.0" promptText="password" />
+            <Separator layoutX="237.0" layoutY="81.0" prefHeight="3.0" prefWidth="336.0" />
+            <Separator layoutX="237.0" layoutY="257.0" prefHeight="3.0" prefWidth="330.0" />
+            <GridPane layoutX="144.0" layoutY="298.0" prefHeight="85.0" prefWidth="286.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="85.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="146.0" minWidth="10.0" prefWidth="115.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Date of birth" textFill="#e8e3e3" GridPane.rowIndex="1" />
+                  <DatePicker fx:id="dateOfBirth" promptText="mm/dd/yyyy" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="email" prefHeight="25.0" prefWidth="165.0" promptText="example@email.com" GridPane.columnIndex="1" />
+                  <Label text="Mail" textFill="#e8e3e3" />
+               </children>
+            </GridPane>
+            <Button fx:id="signUp" layoutX="321.0" layoutY="411.0" mnemonicParsing="false" onAction="#signUpAction" prefHeight="36.0" prefWidth="193.0" styleClass="record-sales" stylesheets="@buttonStyle.css" text="Sign up" />
+         </children>
+        </Pane>
+    </children>
 </AnchorPane>
