[CR-41] Make car photos same aspect ratio [CR-27] Implement details button for displayed cars

--- a/src/main/resources/rc/project/fxml/Item.fxml
+++ b/src/main/resources/rc/project/fxml/Item.fxml
@@ -1,48 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Item">
+<AnchorPane fx:id="itemAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Item">
    <children>
       <Pane prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #555555;" styleClass="display">
          <children>
-            <VBox prefHeight="250.0" prefWidth="250.0">
+            <Label fx:id="itemText" alignment="CENTER" prefWidth="250.0" text="Car Name" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
+            </Label>
+            <Label fx:id="itemPrice" alignment="CENTER" prefWidth="250.0" text="(price) ron / day" textAlignment="CENTER" textFill="WHITE">
+               <padding>
+                  <Insets top="30.0" />
+               </padding>
+            </Label>
+            <Label fx:id="detailsLabel" alignment="CENTER" layoutY="50.0" prefHeight="150.0" prefWidth="250.0" text="label descriere" textFill="WHITE" />
+            <VBox alignment="CENTER" layoutY="50.0" prefHeight="140.0" prefWidth="250.0" styleClass="vbox">
                <children>
-                  <Label fx:id="itemText" alignment="CENTER" prefWidth="250.0" text="Ford Mondeo" textAlignment="CENTER" />
-                  <Label fx:id="itemPrice" alignment="CENTER" prefWidth="250.0" text="50 ron / day" textAlignment="CENTER" />
-                  <ImageView fx:id="itemPhoto" fitHeight="160.0" fitWidth="250.0" pickOnBounds="true">
+                  <ImageView fx:id="itemPhoto" fitHeight="140.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" VBox.vgrow="NEVER">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
-                     <image>
-                        <Image url="@../masini/ford-mondeo.png" />
-                     </image>
                   </ImageView>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Button alignment="CENTER" mnemonicParsing="false" prefWidth="90.0" styleClass="record-sales" text="Details" textAlignment="CENTER">
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button alignment="CENTER" mnemonicParsing="false" prefWidth="90.0" styleClass="record-sales" text="Order" textAlignment="CENTER">
-                           <HBox.margin>
-                              <Insets left="50.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                  </HBox>
                </children>
             </VBox>
+            <HBox layoutY="200.0" prefHeight="40.0" prefWidth="250.0">
+               <children>
+                  <Button fx:id="itemOrder" alignment="CENTER" mnemonicParsing="false" prefWidth="90.0" styleClass="record-sales" text="Order" textAlignment="CENTER" textFill="WHITE">
+                     <HBox.margin>
+                        <Insets left="15.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="itemDetails" alignment="CENTER" mnemonicParsing="false" onAction="#loadDetalii" prefWidth="90.0" text="Details" textAlignment="CENTER" textFill="WHITE">
+                     <HBox.margin>
+                        <Insets left="40.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <styleClass>
+                        <String fx:value="record-sales" />
+                        <String fx:value="strokeme" />
+                     </styleClass>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </Pane>
    </children>
