--- a/src/main/resources/rc/project/fxml/Dashboard.fxml
+++ b/src/main/resources/rc/project/fxml/Dashboard.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -47,7 +48,7 @@
                      <font>
                      <Font name="System Bold" size="15.0" />
                   </font></Button>
-                  <Button fx:id="contactButton" mnemonicParsing="false" onAction="#loadContact" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Contact" textFill="WHITE">
+                  <Button fx:id="contactButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Contact" textFill="WHITE">
                      <VBox.margin>
                         <Insets left="20.0" right="20.0" top="10.0" />
                      </VBox.margin>
@@ -61,7 +62,13 @@
             </VBox>
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="374.0" maxHeight="326.0" maxWidth="180.0" prefHeight="326.0" prefWidth="180.0" style="-fx-background-color: #333333;" styleClass="vbox" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="374.0" />
+      <AnchorPane fx:id="stangaJos" layoutY="374.0" prefHeight="326.0" prefWidth="180.0" style="-fx-background-color: #333333;" styleClass="vbox" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="374.0">
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <Label fx:id="stangaLabel" layoutX="76.0" layoutY="155.0" text="proba" textFill="WHITE" />
+               </children></Pane>
+         </children></AnchorPane>
       <AnchorPane fx:id="display" style="-fx-background-color: #555555;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane fx:id="changeMe" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
