--- a/src/main/resources/rc/project/fxml/Item.fxml
+++ b/src/main/resources/rc/project/fxml/Item.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,13 +11,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="itemAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #333333;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Item">
+<AnchorPane fx:id="itemAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #333333;" stylesheets="@../css/buttonStyle.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Item">
    <children>
-      <Pane prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #555555;" styleClass="display">
+      <Pane fx:id="pane" prefHeight="250.0" prefWidth="250.0" styleClass="display" stylesheets="@../css/Dashboard.css">
          <children>
             <Label fx:id="itemText" alignment="CENTER" prefWidth="250.0" text="Car Name" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
                <padding>
                   <Insets top="5.0" />
@@ -66,8 +65,4 @@
          </children>
       </Pane>
    </children>
-   <stylesheets>
-      <URL value="@../css/Dashboard.css" />
-      <URL value="@../css/buttonStyle.css" />
-   </stylesheets>
 </AnchorPane>
