--- a/src/main/resources/rc/project/fxml/Dashboard.fxml
+++ b/src/main/resources/rc/project/fxml/Dashboard.fxml
@@ -16,34 +16,37 @@
    <children>
       <AnchorPane fx:id="dashboard" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox layoutX="-7.0" layoutY="29.0" maxHeight="350.0" maxWidth="180.0" prefHeight="333.0" prefWidth="180.0" style="-fx-background-color: #333333;" styleClass="vbox" AnchorPane.bottomAnchor="367.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
+            <VBox alignment="CENTER" layoutX="-7.0" layoutY="29.0" maxHeight="350.0" maxWidth="180.0" prefHeight="333.0" prefWidth="180.0" style="-fx-background-color: #333333;" styleClass="vbox" AnchorPane.bottomAnchor="367.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
                <children>
-                  <ImageView fx:id="logo" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" scaleX="1.4" scaleY="1.4" translateY="10.0">
-
+                  <Button fx:id="logo" alignment="CENTER" mnemonicParsing="false" onAction="#loadHome" scaleX="1.4" scaleY="1.4" style="-fx-background-color: transparent;" translateY="20.0">
+                     <graphic>
+                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../icons/old-car(2).png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                      <VBox.margin>
-                        <Insets left="40.0" />
+                        <Insets top="-40.0" />
                      </VBox.margin>
-                     <image>
-                        <Image url="@../icons/old-car(2).png" />
-                     </image>
-                  </ImageView>
-                  <Button fx:id="browseButton" mnemonicParsing="false" onAction="#loadBrowse" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Browse" textFill="WHITE">
+                  </Button>
+                  <Button fx:id="browseButton" alignment="CENTER" mnemonicParsing="false" onAction="#loadBrowse" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Browse" textFill="WHITE">
                      <VBox.margin>
-                        <Insets left="20.0" />
+                        <Insets left="20.0" right="20.0" top="10.0" />
                      </VBox.margin>
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font></Button>
                   <Button mnemonicParsing="false" onAction="#loadStatus" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Status" textFill="WHITE">
                      <VBox.margin>
-                        <Insets left="20.0" top="10.0" />
+                        <Insets left="20.0" right="20.0" top="10.0" />
                      </VBox.margin>
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font></Button>
                   <Button fx:id="accountButton" mnemonicParsing="false" onAction="#loadAccount" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Account" textFill="WHITE">
                      <VBox.margin>
-                        <Insets left="20.0" top="10.0" />
+                        <Insets left="20.0" right="20.0" top="10.0" />
                      </VBox.margin>
                      <font>
                      <Font name="System Bold" size="15.0" />
