--- a/src/main/resources/rc/project/fxml/LoginMain.fxml
+++ b/src/main/resources/rc/project/fxml/LoginMain.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="loginPane" prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #555555;" stylesheets="@Dashboard.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.LoginController">
+<AnchorPane fx:id="loginPane" prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #555555;" stylesheets="@../css/Dashboard.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.LoginController">
    <children>
-      <Pane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #333333;" styleClass="display" stylesheets="@buttonStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #333333;" styleClass="display" stylesheets="@../css/buttonStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Pane layoutX="193.0" layoutY="136.0" prefHeight="408.0" prefWidth="440.0">
                <children>
@@ -25,12 +25,12 @@
                   <PasswordField fx:id="passwordField" layoutX="157.0" layoutY="162.0" prefHeight="32.0" prefWidth="169.0" promptText="password" />
                   <ImageView fitHeight="44.0" fitWidth="38.0" layoutX="100.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@user.png" />
+                        <Image url="@../icons/user.png" />
                      </image>
                   </ImageView>
                   <ImageView fitHeight="38.0" fitWidth="38.0" layoutX="99.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@password.png" />
+                        <Image url="@../icons/password.png" />
                      </image>
                   </ImageView>
                   <Text fill="#e8e3e3" layoutX="118.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MEMBER LOGIN" textAlignment="CENTER" wrappingWidth="246.13671875">
