[CR-17] Create a home page with a dashboard for navigation on the dealer's page

--- a/src/main/resources/rc/project/fxml/Dashboard.fxml
+++ b/src/main/resources/rc/project/fxml/Dashboard.fxml
@@ -89,6 +89,6 @@
    </children>
    <stylesheets>
       <URL value="@../css/buttonStyle.css" />
-      <URL value="@../css/Dashboard.css" />
+      <URL value="@../css/Display.css" />
    </stylesheets>
 </AnchorPane>
