--- a/src/main/resources/rc/project/fxml/LoginMain.fxml
+++ b/src/main/resources/rc/project/fxml/LoginMain.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginPane" prefHeight="660.0" prefWidth="850.0" style="-fx-background-color: #414361;" stylesheets="@../css/Dashboard.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.LoginController">
+<AnchorPane fx:id="loginPane" prefHeight="660.0" prefWidth="850.0" style="-fx-background-color: #414361;" stylesheets="@../css/Display.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.LoginController">
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2a2d43;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
