--- a/src/main/resources/rc/project/css/Display.css
+++ b/src/main/resources/rc/project/css/Display.css
@@ -8,4 +8,8 @@
    -fx-background-color: transparent;
 }
 
+.gradient {
+    -fx-background-color: radial-gradient(center 50% 50% , radius 70% ,	#1FB480,#555555);
+}
+
 
