--- a/src/main/resources/rc/project/css/Display.css
+++ b/src/main/resources/rc/project/css/Display.css
@@ -9,7 +9,11 @@
 }
 
 .gradient {
-    -fx-background-color: radial-gradient(center 50% 50% , radius 70% ,	#1FB480,#555555);
+    -fx-background-color: radial-gradient(center 50% 50% , radius 70% ,	#1FB480, #555555);
+}
+
+.gradient1 {
+    -fx-background-color: radial-gradient(center 50% 50% , radius 70% , #189ab4, #555555);
 }
 
 
