--- a/src/main/resources/rc/project/fxml/Dealer.fxml
+++ b/src/main/resources/rc/project/fxml/Dealer.fxml
@@ -16,9 +16,9 @@
    <children>
       <Pane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #333333;">
          <children>
-            <Pane layoutX="170.0" layoutY="20.0" prefHeight="60.0" prefWidth="740.0" style="-fx-background-color: #555555;" styleClass="vbox">
+            <Pane layoutX="110.0" layoutY="20.0" prefHeight="60.0" prefWidth="860.0" style="-fx-background-color: #555555;" styleClass="vbox">
                <children>
-                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="740.0">
+                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="860.0">
                      <children>
                         <Button fx:id="editCars" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Edit Cars" textFill="WHITE">
                            <HBox.margin>
@@ -46,6 +46,14 @@
                         </Button>
                         <Button fx:id="seeReviews" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="See Reviews" textFill="WHITE">
                            <HBox.margin>
+                              <Insets left="20.0" right="20.0" />
+                           </HBox.margin>
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="login" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Login" textFill="WHITE">
+                           <HBox.margin>
                               <Insets left="20.0" />
                            </HBox.margin>
                            <font>
@@ -53,6 +61,9 @@
                            </font>
                         </Button>
                      </children>
+                     <padding>
+                        <Insets left="20.0" right="20.0" />
+                     </padding>
                   </HBox>
                </children>
             </Pane>
