--- a/src/main/resources/rc/project/css/Display.css
+++ b/src/main/resources/rc/project/css/Display.css
@@ -16,4 +16,8 @@
     -fx-background-color: radial-gradient(center 50% 50% , radius 70% , #189ab4, #555555);
 }
 
+.gradient2 {
+    -fx-background-color: radial-gradient(center 50% 50% , radius 65% , #1FB480, #333333);
+}
+
 
