--- a/src/main/resources/rc/project/fxml/Dashboard.fxml
+++ b/src/main/resources/rc/project/fxml/Dashboard.fxml
@@ -7,7 +7,9 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -74,15 +76,26 @@
          </children></AnchorPane>
       <AnchorPane fx:id="display" style="-fx-background-color: #555555;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane fx:id="changeMe" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+            <AnchorPane fx:id="changeMe" prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #555555;" stylesheets="@../css/Display.css" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
                <children>
-                  <Pane style="-fx-background-color: #333333;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #333333;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Text layoutX="333.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Page">
+                        <Text fill="WHITE" layoutX="360.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome !">
                            <font>
-                              <Font size="36.0" />
+                              <Font name="System Bold" size="24.0" />
                            </font>
                         </Text>
+                        <Text fill="WHITE" layoutX="324.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Take a look at our best offers">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Text>
+                        <Text fill="WHITE" layoutX="361.0" layoutY="662.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Car Rental 2.0® v1.0.0" />
+                        <GridPane fx:id="gridPaneHome" layoutX="10.0" layoutY="310.0" maxHeight="0.0" maxWidth="0.0" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0">
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                        </GridPane>
                      </children>
                   </Pane>
                </children>
