--- a/src/main/resources/rc/project/fxml/LoginMain.fxml
+++ b/src/main/resources/rc/project/fxml/LoginMain.fxml
@@ -18,13 +18,13 @@
                <children>
                   <Pane prefHeight="500.0" prefWidth="480.0" style="-fx-background-color: #555555;" styleClass="vbox">
                      <children>
-                        <Button fx:id="login" layoutX="190.0" layoutY="313.0" mnemonicParsing="false" onAction="#loginButtonAction" prefHeight="40.0" prefWidth="97.0" styleClass="record-sales" text="Login">
+                        <Button fx:id="login" layoutX="190.0" layoutY="321.0" mnemonicParsing="false" onAction="#loginButtonAction" prefHeight="40.0" prefWidth="97.0" styleClass="record-sales" text="Login" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Button>
-                        <TextField fx:id="usernameField" layoutX="172.0" layoutY="216.0" prefHeight="32.0" prefWidth="169.0" promptText="username" />
-                        <PasswordField fx:id="passwordField" layoutX="172.0" layoutY="264.0" prefHeight="32.0" prefWidth="169.0" promptText="password" />
+                        <TextField fx:id="usernameField" layoutX="170.0" layoutY="216.0" prefHeight="32.0" prefWidth="169.0" promptText="username" />
+                        <PasswordField fx:id="passwordField" layoutX="170.0" layoutY="264.0" prefHeight="32.0" prefWidth="169.0" promptText="password" />
                         <ImageView fitHeight="44.0" fitWidth="38.0" layoutX="128.0" layoutY="213.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../icons/user.png" />
@@ -40,7 +40,7 @@
                               <Font name="System Bold" size="27.0" />
                            </font>
                         </Text>
-                        <Button fx:id="register" layoutX="174.0" layoutY="424.0" mnemonicParsing="false" onAction="#loadRegister" prefHeight="40.0" prefWidth="128.0" styleClass="record-sales" text="REGISTER NOW">
+                        <Button fx:id="register" layoutX="175.0" layoutY="420.0" mnemonicParsing="false" onAction="#loadRegister" prefHeight="40.0" prefWidth="128.0" styleClass="record-sales" text="Register" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
