[CR-67] Implement a dynamic page that shows only how many orders you placed

--- a/src/main/resources/rc/project/fxml/Status.fxml
+++ b/src/main/resources/rc/project/fxml/Status.fxml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="660.0" prefWidth="850.0" style="-fx-background-color: #414361;" stylesheets="@../css/Display.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Browse">
+<AnchorPane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: transaprent;" stylesheets="@../css/Display.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Status">
     <children>
-        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2a2d43;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <Text layoutX="368.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status">
-                    <font>
-                        <Font size="36.0" />
-                    </font>
-                </Text>
-            </children>
+        <Pane style="-fx-background-color: #555555;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Text fill="WHITE" layoutX="40.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="My orders:">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Text>
+            <ScrollPane hbarPolicy="NEVER" layoutX="10.0" layoutY="50.0" prefHeight="620.0" prefWidth="820.0" style="-fx-background-color: transaprent;" styleClass="display" vbarPolicy="NEVER">
+               <content>
+                  <GridPane fx:id="gridStatus" maxHeight="0.0" maxWidth="0.0" minHeight="0.0" minWidth="0.0" translateY="-20.0">
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </content>
+            </ScrollPane>
+         </children>
         </Pane>
     </children>
 </AnchorPane>
