[CR-77] Create a db for orders and insert cars in it after confirmation

--- a/src/main/resources/rc/project/fxml/Item.fxml
+++ b/src/main/resources/rc/project/fxml/Item.fxml
@@ -33,7 +33,7 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-            <Label fx:id="warningLabel" alignment="CENTER" prefWidth="250.0" text="label warning" textFill="WHITE" translateY="145.0">
+            <Label fx:id="warningLabel" alignment="CENTER" prefWidth="250.0" text="label warning" textFill="WHITE" translateY="145.0" visible="false">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
